<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JCertif</string>
    <string name="action_settings">Settings</string>

    <string-array name="menu_array">
        <item>Sessions</item>
        <item>Speakers</item>
        <item>Maps</item>
        <item>About</item>
    </string-array>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SocialStreamFragment</string>
    <string name="empty_social_stream">No posts found.</string>
    <string name="stream_originally_shared">%s originally shared this post</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="session">session</string>
    <string name="spakers">SPEAKERS</string>
    <string name="action_refresh">Refresh</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="all">All</string>
    <string name="registration">Registration</string>
    <string name="title">Title</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="website">Website</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="company">Company</string>
    <string name="phone">Phone</string>
    <string name="photo">Photo</string>
    <string name="biography">Biography</string>
    <string name="cancel">Cancel</string>
    <string name="or_signin_with">Or sign in with</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="from_">"From "</string>
      <string name="about">"About"</string>
    <string name="_to_">" to "</string>
     <string name="desc">"DESCRIPTION"</string>
  <string name="action_add_to_schedule">"Add to schedule"</string>
  <string name="fetching_initial_data">Fetching initial data..</string>
  <string name="init">Initialisation, please wait</string>
  <string name="google_login_">Signing in with Google..</string>
  <string name="sposors">Sponsors</string> 
  <string name="share">Share</string>
   <string name="room">Room</string>
  <string name="failed_to_load_data_check_your_internet_settings_">Failed to load data. Check your internet settings.</string>
  <string name="vide"></string>
   <string name="lorem">"Sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum.
"</string>
   <string name="sessions">Sessions</string>
    <string name="contributor">Contributor</string>
   <string name="tv_commits">tv_commits</string>
  
</resources>